--- a/Ultimate Penguin Rampage/Ultimate Penguin Rampage.cbp
+++ b/Ultimate Penguin Rampage/Ultimate Penguin Rampage.cbp
@@ -13,6 +13,7 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
+					<Add directory="include" />
 				</Compiler>
 			</Target>
 			<Target title="Release">
@@ -22,6 +23,7 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-O2" />
+					<Add directory="include" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -30,7 +32,14 @@
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
+			<Add directory="C:/Users/Cyprien/Documents/Creation projects/Junkies Corporation/Ultimate-Penguin-Rampage/Ultimate Penguin Rampage/SDL2/include/SDL2" />
 		</Compiler>
+		<Linker>
+			<Add option="-lmingw32 -lSDL2main -lSDL2" />
+			<Add directory="C:/Users/Cyprien/Documents/Creation projects/Junkies Corporation/Ultimate-Penguin-Rampage/Ultimate Penguin Rampage/SDL2/lib" />
+		</Linker>
+		<Unit filename="include/UPR.h" />
+		<Unit filename="src/UPR.cpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
