--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,21 @@
-$ cat .gitignore
-*.depend
-*.layout
-plop.txt
+#################
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+
+# Executables
+*.exe
+*.out
+*.app
