--- a/UltimatePenguinRampage/UltimatePenguinRampage.cbp
+++ b/UltimatePenguinRampage/UltimatePenguinRampage.cbp
@@ -32,11 +32,11 @@
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
-			<Add directory="C:/Users/Cyprien/Documents/Creation projects/Junkies Corporation/Ultimate-Penguin-Rampage/Ultimate Penguin Rampage/SDL2/include/SDL2" />
+			<Add directory="C:/Users/Cyprien/Documents/Creation projects/Junkies Corporation/Ultimate-Penguin-Rampage/UltimatePenguinRampage/SDL2/include/SDL2" />
 		</Compiler>
 		<Linker>
 			<Add option="-lmingw32 -lSDL2main -lSDL2" />
-			<Add directory="C:/Users/Cyprien/Documents/Creation projects/Junkies Corporation/Ultimate-Penguin-Rampage/Ultimate Penguin Rampage/SDL2/lib" />
+			<Add directory="C:/Users/Cyprien/Documents/Creation projects/Junkies Corporation/Ultimate-Penguin-Rampage/UltimatePenguinRampage/SDL2/lib" />
 		</Linker>
 		<Unit filename="include/Arme.h" />
 		<Unit filename="include/Carte.h" />
