Création d'une classe pour les textures
La classe Texture gère le chargement, le changement d'image et la
destruction d'une texture. Elle contient également les dimensions de
l'image chargée.

--- a/UltimatePenguinRampage/UltimatePenguinRampage.cbp
+++ b/UltimatePenguinRampage/UltimatePenguinRampage.cbp
@@ -47,6 +47,7 @@
 		<Unit filename="include/Objet.h" />
 		<Unit filename="include/Options.h" />
 		<Unit filename="include/Personnage.h" />
+		<Unit filename="include/Sprite.h" />
 		<Unit filename="include/Tile.h" />
 		<Unit filename="include/UPR.h" />
 		<Unit filename="include/Utils.h" />
@@ -59,6 +60,7 @@
 		<Unit filename="src/Objet.cpp" />
 		<Unit filename="src/Options.cpp" />
 		<Unit filename="src/Personnage.cpp" />
+		<Unit filename="src/Sprite.cpp" />
 		<Unit filename="src/Tile.cpp" />
 		<Unit filename="src/UPR.cpp" />
 		<Unit filename="src/Utils.cpp" />
