Ajout d'une classe qui centralise les texture
Ainsi, les 8 images des Ennemis ne sont chargées qu'une fois chacune, et
chaque Ennemi pourra aller chercher l'image qu'il lui faut.

--- a/UltimatePenguinRampage/UltimatePenguinRampage.cbp
+++ b/UltimatePenguinRampage/UltimatePenguinRampage.cbp
@@ -44,6 +44,7 @@
 		<Unit filename="include/Ennemi.h" />
 		<Unit filename="include/Entite.h" />
 		<Unit filename="include/Enums.h" />
+		<Unit filename="include/Images.h" />
 		<Unit filename="include/Jeu.h" />
 		<Unit filename="include/Joueur.h" />
 		<Unit filename="include/MenuPrincipal.h" />
@@ -60,6 +61,7 @@
 		<Unit filename="src/Carte.cpp" />
 		<Unit filename="src/Ennemi.cpp" />
 		<Unit filename="src/Entite.cpp" />
+		<Unit filename="src/Images.cpp" />
 		<Unit filename="src/Jeu.cpp" />
 		<Unit filename="src/Joueur.cpp" />
 		<Unit filename="src/MenuPrincipal.cpp" />
