Ajout du début de la classe Arene
- Ajout de la classe Arene qui gère le déroulement des différentes
arènes du jeu.
- Incorporation d'Arene dans le déroulement du Jeu.
- Modification du Makefile et compilation du programme. Devrait
fonctionner sans soucis.

--- a/UltimatePenguinRampage_rebuild/Makefile
+++ b/UltimatePenguinRampage_rebuild/Makefile
@@ -1,5 +1,5 @@
 #OBJS specifies which files to compile as part of the project
-OBJS = src\Jeu.cpp src\Profil.cpp src\Texture.cpp src\Timer.cpp src\UPR.cpp src\Utils.cpp
+OBJS = src\Arene.cpp src\Jeu.cpp src\Profil.cpp src\Texture.cpp src\Timer.cpp src\UPR.cpp src\Utils.cpp
 
 #CC specifies which compiler we're using
 CC = g++
