Ajout de Projectiles
- Ajout des projectiles, de leur tir, de leur affichage et de leur
destruction.
- Voir liste des tâches terminée pour plus de détails sur les
modifications exactes du code.
- Liste des tâches terminée : 8.
- M-à-j du Makefile.
- Compilation.

--- a/UltimatePenguinRampage_rebuild/Makefile
+++ b/UltimatePenguinRampage_rebuild/Makefile
@@ -1,5 +1,5 @@
 #OBJS specifies which files to compile as part of the project
-OBJS = src\Arene.cpp src\Arme.cpp src\Carte.cpp src\Entite.cpp src\Jeu.cpp src\Joueur.cpp src\Profil.cpp src\Texture.cpp src\Tileset.cpp src\Timer.cpp src\UPR.cpp src\Utils.cpp
+OBJS = src\Arene.cpp src\Arme.cpp src\Carte.cpp src\Entite.cpp src\Jeu.cpp src\Joueur.cpp src\Profil.cpp src\Projectile.cpp src\Texture.cpp src\Tileset.cpp src\Timer.cpp src\UPR.cpp src\Utils.cpp
 
 #CC specifies which compiler we're using
 CC = g++
